<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ThumbsUP</string>
    <string name="mainmenu_title">Select A Game To Play</string>
    <string name="mainmenu_newgame">New Game</string>
    <string name="mainmenu_highscores">High Scores</string>
    <string name="mainmenu_options">Options</string>
    <string name="mainmenu_credits">Credits</string>
    
    <!--
    ===============================
         Game-specific stuff
    ===============================
    -->
    
    <!-- Game 1 - Super Fun Fractions -->
    <string name="game1_name">Super Fun Fractions</string>
    <string name="game1a_name">Add Fractions</string>
    
    <!-- Game 2 - The More You Know - Anthony Scoppa -->
    <string name="game2_name">*~* THE MORE YOU KNOW! *~*</string>
    <string-array name="topics_array">
        <item>Science</item>
        <item>Technology</item>
        <item>History</item>
        <item>Music</item>
        <item>Movies</item>
        <item>Sports</item>
        <item>Politics</item>
        <item>Religion</item>  
    </string-array>
    
    <string-array name="factArray1"> 
    <item>The largest beetle is the goliath beetle</item> 
    <item>The first plastic was called bakelite</item> 
    <item>Palaentologists study fossils</item> 
    <item>An Ohm is the SI unit for resistance</item> 
    <item>The Aorta is the largest Artery in the human body</item>
    <item>The chemical compound for Sulfuric Acid is H2 SO4</item>
    <item>A baby Whale is called a calf</item>
    <item>Adrenaline is a hormone that stimulates the nervous system</item>
    <item>In Fahrenheit the boiling point of water is 212 degress</item>
    <item>The common name for sodium chloride is salt</item>
    </string-array>
    
    <string-array name="factArray2"> 
    <item>Solar power is generated from the sun</item> 
    <item>The first Apple iPhone became available in 2007</item> 
    <item>CPU stands for Central Processing Unit</item> 
    <item>The Hubble Space Telescope was named after Edwin Hubble</item> 
    <item>The first  Harley Davidson motorcycle was built in 1903</item>
    <item>Firefox, Opera, Chrome, Safari and Explorer are web browsers</item>
    <item>On a standard 747 jumbo jet there are 420 seats</item>
    <item>It takes about 1,100 watts to run an electric toaster</item>
    <item>About 1.8 billion light bulbs are produced in the United States each year</item>
    </string-array>
    
    
    <string-array name="factArray3"> 
    <item>In 1000 B.C. Israelites payed their taxes with Raisins</item> 
    <item>Until 1796 Tennessee was known as Franklin</item> 
    <item>Abraham Lincoln was assassinated in a theatre</item> 
    <item>Pablo Picasso had his first painting exhibition at the age of 16</item> 
    <item>New Zealand was the first country to allow women to vote in 1903</item>
    <item>The Titanic was the first ocean liner to have a swimming pool</item>
    <item>The Hundred Years War lasted 116 years</item>
    <item>Napolean died in exile on the island of St. Helen</item>
    <item>There are 6000 men in a Roman legion</item>
    <item>John adams was the second president of the united states</item>
	</string-array>

	<string-array name="factArray4"> 
    <item>Rage Against the Machines first single debut was Bombtrack</item> 
    <item>From The Cradle was an album written by Eric Clapton</item> 
    <item>Bono is a member of the band U2</item> 
    <item>George Harrison wrote My Sweet Love</item> 
    <item>Brass in the pocket was a hit song by The Pretenders</item>
    <item>David Bowie Teamed with Queen to write Under Pressure</item>
    <item>Blue Oyster Cult wrote the song Dont Fear</item>
    <item>Motown originated in Detroit</item>
    <item>Supertramp released the song Breakfast in America</item>
    <item>Rick Rolled</item>
    </string-array>
    
    <string-array name="factArray5"> 
    <item>Ill be back was a signature line in the film The Terminator</item> 
    <item>Al Pacino won an oscar for the line "hoo-ah"</item> 
    <item>In the movie Philadelphia Tom Hanks and Antonio Banderas are paired as lovers</item> 
    <item>Tom Hanks voiced the character Woody from Toy Story</item> 
    <item>the line "You cant handle the truth" comes from the film A Few Good Men</item>
    <item>In the move The Mask Jim Carrey plays a bank clerk</item>
    <item>Patrick Swayze played Johnny Castle in Footloose</item>
    <item>Harrison Ford is the famous character Indiana Jones</item>
    <item>The song The Bear Necessities is from the movie Jungle Book</item>
    <item>The Lady and the Tramp is about dogs</item>
    </string-array>
    
    
    <string-array name="factArray6"> 
    <item>The term home run originated from Cricket</item> 
    <item>The Dodgers were the only team to win two world series championships in the 1980s</item> 
    <item>The Dallas Cowboys were the first professional football team to hire a cheerleading squad</item> 
    <item>The Americas cup is a best of nine racing series</item> 
    <item>32 teams are allowed at the world cup</item>
    <item>Jockey Wilson can be associated with darts</item>
    <item>A game of field hockey lasts 70 minutes</item>
    <item>In the 1970s numbers made their appearence on football jerseys</item>
    <item>Nikes logo is called the swoosh</item>
    <item>The Detroit Red Wings are a hockey team</item>
</string-array>
<string-array name="factArray7"> 
    <item>The First President was George Washington</item> 
    <item>The Second President was John Adams</item> 
    <item>The third president was Thomas Jefferson</item> 
    <item>The fourth president was James Madison</item> 
    <item>The fifth president was James Monroe</item>
    <item>The sixth president was Andrew Jackson</item>
    <item>The seventh president was John Quincy Adams</item>
    <item>The eighth president was Martin Van Buren</item>
    <item>The ninth president was William Harrison</item>
    <item>The tenth president was John Tyler</item>
    </string-array>
    
    <string-array name="factArray8"> 
    <item>FACT ARRAY 8 FACT 1</item> 
    <item>FACT ARRAY 8 FACT 2</item> 
    <item>FACT ARRAY 8 FACT 3</item> 
    <item>FACT ARRAY 8 FACT 4</item> 
    <item>FACT ARRAY 8 FACT 5</item>
    <item>FACT ARRAY 8 FACT 6</item>
    <item>FACT ARRAY 8 FACT 7</item>
    <item>FACT ARRAY 8 FACT 8</item>
    <item>FACT ARRAY 8 FACT 9</item>
    <item>FACT ARRAY 8 FACT 10</item>
    </string-array>
    
    <!-- Game 3 - Equation Balancer -->
    <string name="game3_name">Equation Balancer</string>
    <string name="chem_choice">Choose a Difficulty Setting.</string>
    <string name="chem_spinner">Difficulty</string>
    <string name="chem_play">Play!</string>
    <string name="chem_back">Back</string>
    <string name="chem_submit">Submit</string>
    <string name="chem_hint">Get a Hint!</string>
    
    
    <!-- Game 4 - Color Matching -->
    <string name="game4_name">Color Matching</string>
    <string name="hello">Choose the following color</string>
    <string name="bonus_game">Save Marine life</string>
    <string-array name="colors"> 
	    <item>BLACK</item> 
	    <item>BLUE</item> 
	    <item>BROWN</item> 
	    <item>DARK BLUE</item>
	    <item>GREEN</item> 
	    <item>GREY</item>
	    <item>ORANGE</item> 
	    <item>PINK</item> 
	    <item>PURPLE</item> 
	    <item>RED</item> 
	    <item>WHITE</item> 
	    <item>YELLOW</item>
    </string-array> 
    
    <!-- Game 5 - History Memory -->
    <string name="game5_name">History Memory</string>
    <string name="game5_score">Score: 0</string>
    
    <!-- Game 6 - Inventions -->
    <string name="game6_name">Inventions</string>
    <string name="title6">"LEARN and PLAY"</string>
    <string name="hello6">Hello World, FamousInventions!</string>
    <string name="app_name6">FamousInventions</string>
    <string name="invented">invented</string>
    <string name="q1">who invented Telephone?</string>
    <string name="q2">who invented Radio?</string>
    <string name="q3">who invented Microwave?</string>
    <string name="q4">who invented Sewing machine?</string>
    <string name="q5">who invented Fountain pen?</string>
    <string name="q6">who invented Revolver?</string>
    <string-array name="inventors">
        <item>GRAHAM BELL</item>
        <item>JAMES WATT</item>
        <item>DOUGLAS ENGELBART</item>
        <item>EDWARD TELLER</item>
        <item>ALESSANDRO VOLTA</item>
        <item>MARCONI</item>
        <item>SAMEUL COLT</item>
        <item>SYLVESTER ROPER</item>
        <item>HENRY SEELEY</item>
        <item>SUSHRATA</item>
        <item>CHRISTOPHER SHOLES</item>
        <item>SAMUEL MORSE</item> 
        <item>MERRITT SINGER</item>
        <item>SPENCER</item>
        <item>JOHN HARINGTON</item> 
        <item>LEWIS WATERMAN</item>      
    </string-array>
    <string-array name="inventions">
        <item>TELEPHONE</item>
        <item>STEAM ENGINE</item>
        <item>COMPUTER MOUSE</item>
        <item>HYDROGEN BOMB</item>
        <item>BATTERY</item>
        <item>RADIO</item>
        <item>REVOLVER</item>
        <item>MOTORCYCLE</item>
        <item>IRON BOX</item>
        <item>PLASTIC SURGERY</item>
        <item>TYPEWRITER</item>
        <item>TELEGRAPH</item>
        <item>SEWING MACHINE</item>
        <item>MICROWAVE</item>
        <item>FLUSH TOILET</item>  
        <item>FOUNTAIN PEN</item>     
    </string-array>  

	<!-- Game 7 - Coin Counting -->
	<string name="game7_name">Coin Counting</string>
	
	<!-- Game 8 - Electronics -->
	<string name="game8_name">Electronics</string>


</resources>
