<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout 
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:weightSum="1">
    <ImageView android:id="@+id/imageView1" android:src="@drawable/thumbsup" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="26dp" android:layout_width="match_parent"></ImageView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:text="@string/app_name" android:layout_height="wrap_content" android:layout_below="@+id/imageView1" android:layout_centerHorizontal="true" android:layout_marginTop="17dp" android:layout_width="wrap_content" android:layout_gravity="center_horizontal"></TextView>
    <Button android:layout_marginTop="60dp" android:id="@+id/mbutton1" android:text="@string/mainmenu_newgame" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="0.09"></Button>
    <Button android:id="@+id/mButton01" android:text="@string/mainmenu_highscores" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/mainmenu_options" android:id="@+id/mButton02"  android:layout_below="@+id/mButton01"></Button>
    <Button android:id="@+id/mButton03" android:text="@string/mainmenu_credits" android:layout_marginBottom="20dp" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
</LinearLayout>
</RelativeLayout>
</ScrollView>