<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/white">
    <TextView android:id="@+id/textView2" android:textColor="#000000" android:layout_width="wrap_content" android:text="@string/chem_choice" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_centerHorizontal="true" android:layout_marginTop="22dp"></TextView>
    <TextView android:id="@+id/textView1" android:textColor="#000000" android:layout_width="wrap_content" android:text="@string/game3_name" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="100dp"></TextView>
    <Button android:text="@string/chem_play" android:textSize="20dp" android:id="@+id/startButton" android:background="@drawable/finalbutton" android:layout_width="150dp" android:onClick="myClickHandler" android:layout_height="30dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="170dp"></Button>
    <Button android:text="@string/chem_back" android:textSize="20dp" android:id="@+id/button1" android:background="@drawable/finalbutton" android:layout_width="150dp" android:onClick="backHandler" android:layout_height="30dp" android:layout_alignTop="@+id/startButton" android:layout_alignLeft="@+id/startButton" android:layout_marginTop="60dp"></Button>
    <Spinner android:layout_width="wrap_content" android:prompt="@string/chem_spinner" android:id="@+id/diffSpinner" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true"></Spinner> 
</RelativeLayout>
