<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="High Scores!" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_gravity="center_horizontal"></TextView>
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game1_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:layout_gravity="right"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game2_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView6" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game3_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView7" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView8" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game4_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView9" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow5">
            <TextView android:id="@+id/textView11" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game5_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView13" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow6">
            <TextView android:id="@+id/textView12" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game6_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView10" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow7">
            <TextView android:id="@+id/textView14" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/game8_name" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
            <TextView android:id="@+id/textView15" android:textAppearance="?android:attr/textAppearanceMedium" android:text="0" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></TextView>
        </TableRow>
    </TableLayout>
</LinearLayout>
